--- a/react-demo-app/src/App.css
+++ b/react-demo-app/src/App.css
@@ -40,3 +40,64 @@
 .read-the-docs {
   color: #888;
 }
+
+.todo {
+  border: 1px solid #333;
+  border-radius: 3px;
+  padding: 10px;
+  background-color: #111;
+  height:100%;
+}
+
+.todo input[type~="submit"]{
+  border: 1px solid #464;
+  background-color: #1F3F1F;
+  border-radius: 4px;
+}
+
+.todo input[type~="text"]{
+  border: 1px solid #444;
+  margin-right:4px;
+}
+
+.todo form {
+  margin-bottom:10px;
+}
+
+.todo .item {
+  text-align: left;
+  border: 1px solid #222;
+  padding: 5px 10px;
+  background-color: #121212;
+}
+
+.todo .item input {
+  margin-right:5px;
+}
+
+.todo .item.done {
+  background-color: #1F3F1F;
+}
+
+.todo.all-done {
+  background-color: #1F281F;
+}
+
+.todo .item .item-label {
+  display: inline-block;
+}
+
+.todo .item .clear-item {
+  color: #CCC;
+  cursor: pointer;
+  border: 1px solid #999;
+  border-radius: 1000px;
+  display:inline-block;
+  padding: 0px 4px 2px 4px;
+  line-height: 16px;
+  float:right;
+}
+
+h1.app-heading {
+  margin-bottom: 40px;
+}
